--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.13.0",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-av": "~8.7.0",
     "expo-constants": "~9.3.3",
     "expo-image-picker": "~9.2.0",
     "expo-permissions": "~10.0.0",
@@ -31,7 +32,7 @@
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
     "validate.js": "^0.13.1",
-    "expo-av": "~8.7.0"
+    "expo-screen-orientation": "~2.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
